...
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_check"
        android:title="@string/btn_save"
        app:showAsAction="always|withText" />

</menu>
