...
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/server_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/server_address"
            android:inputType="textUri"
            android:text="@string/owncloud_server" />
...
